Fixed white space on side and navbar adjusts better for mobile. Still need to fix image sizing.

--- a/css/navbarStyleSheet.css
+++ b/css/navbarStyleSheet.css
@@ -8,7 +8,7 @@
     position: fixed;
     width:100%;
     z-index: 1;
-    padding-left: 7%;
+    /*padding-left: 5%;*/
   }
   
   #navbar li {
